# gda-testing

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GRAPHS.md  README.md  index.html  package-lock.json
graphs/circulant_graph/: 100_[1,2].json  100_[1].json  5000_[1,2,3].json  5000_[1,2].json  5000_[1].json  50_[1,2].json
graphs/complete_bipartite_graph/: 100_10.json  100_100.json  100_50.json  100_500.json  10_10.json  10_100.json  10_50.json  10_500.json  500_10.json  500_100.json  500_50.json  50_10.json  50_100.json  50_50.json  50_500.json
graphs/complete_graph/: 100.json  50.json
graphs/complete_kpartite_graph/: [10,50,100].json  [50,100,500].json
graphs/connected_cliques/: 4_10.json  50_15.json  8_15.json
graphs/cube_graph/: 2.json  3.json  5.json
graphs/dorogovtsev_mendes/: 1000.json  140.json  20.json
graphs/empty_graph/: 10.json  100.json  50.json  5000.json
graphs/example-instances-2024/: 100-nodes.json  15-nodes.json  150-nodes.json  225-nodes.json  625-nodes.json  70-nodes.json  sol-100-nodes-10-planar.json  sol-15-nodes-5-planar.json  sol-150-nodes-50-planar.json  sol-225-nodes-16-planar.json  sol-625-nodes-5-planar.json  sol-70-nodes-16-planar.json
graphs/globe_graph/: 100_10.json  100_100.json  100_50.json  10_10.json  10_100.json  10_50.json  50_10.json  50_100.json  50_50.json
leaderboard/: team-1.json
src/: cli.rs  compare_mode.rs  comparer.rs  graph.rs  graphs_runner.rs  index.js  leaderboard.rs  leaderboard_mode.rs  main.rs  optimizer_protocol.rs
stats/: team-1-71f93e9fe39e4b8a6dcd9b84244531f5d1c19533.csv  team-1.csv
(+160 files in other folders)
