[package]
name = "gda_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features=["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ctrlc = "3.4.5"
petgraph = "0.7.1"
petgraph-gen = "0.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
anyhow = "1.0.97"
smol = "2.0.2"
